--- a/login.html
+++ b/login.html
@@ -2,158 +2,230 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Book Nest - Sign Up / Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Sign Up / Login - Book Nest</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f6f6f6;
-      margin: 0;
-      padding: 0;
-    }
-
-    nav {
-      background-color: #6A4FB6;
-      padding: 1rem 2rem;
-    }
-
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
+    .form-tabs {
       display: flex;
       justify-content: center;
-      gap: 2rem;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: white;
-      font-weight: bold;
-    }
-
-    nav a:hover,
-    nav a.active {
-      text-decoration: underline;
-    }
-
-    .auth-container {
-      max-width: 400px;
-      margin: 2rem auto;
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    .auth-container h2 {
-      text-align: center;
-      margin-bottom: 1.5rem;
-      color: #4A357E;
-    }
-
-    .auth-container form {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .auth-container input {
       margin-bottom: 1rem;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
     }
-
-    .auth-container button {
-      background-color: #6A4FB6;
-      color: white;
+    .form-tabs button {
+      flex: 1;
+      padding: 0.8rem;
+      cursor: pointer;
       border: none;
-      padding: 0.75rem;
+      background: #f1f1f1;
       font-size: 1rem;
+    }
+    .form-tabs button.active {
+      background: #1a73e8;
+      color: #fff;
+    }
+    .form-container {
+      max-width: 400px;
+      margin: auto;
+      padding: 1rem;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .form-container label {
+      display: block;
+      margin-top: 0.5rem;
+    }
+    .form-container input {
+      width: 100%;
+      padding: 0.5rem;
+      margin: 0.3rem 0 1rem 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .btn-primary {
+      width: 100%;
+      padding: 0.8rem;
+      background: #1a73e8;
+      color: #fff;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    .btn-primary:hover {
+      background: #0d5ec2;
+    }
+    .error-message {
+      color: red;
+      font-size: 0.9rem;
+      margin-bottom: 1rem;
+    }
+    .welcome-user {
+      font-weight: bold;
+      margin-right: 1rem;
+    }
+    .logout-btn {
+      background: #ff4d4d;
+      border: none;
+      padding: 0.4rem 0.8rem;
+      color: #fff;
       border-radius: 5px;
       cursor: pointer;
     }
-
-    .auth-container button:hover {
-      background-color: #4A357E;
-    }
-
-    .switch-form {
-      text-align: center;
-      margin-top: 1rem;
-      font-size: 0.95rem;
-    }
-
-    .switch-form a {
-      color: #6A4FB6;
-      cursor: pointer;
-      text-decoration: underline;
+    .logout-btn:hover {
+      background: #e60000;
     }
   </style>
 </head>
 <body>
 
   <nav>
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="genres.html">Genres</a></li>
-      <li><a href="books.html">Books</a></li>
-      <li><a href="login.html" class="active">Sign Up / Login</a></li>
-    </ul>
-  </nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="genres.html">Genres</a></li>
+    <li><a href="books.html">Books</a></li>
+    <li id="accountLink"><a href="login.html">Sign Up / Login</a></li>
+    <li><a href="cart.html">Cart (<span id="cartCount">0</span>)</a></li>
+  </ul>
+</nav>
 
-  <div class="auth-container">
-    <h2 id="form-title">Sign Up</h2>
+  <main>
+    <h1 class="page-title">Account</h1>
 
-    <form id="signup-form">
-      <input type="text" id="signup-username" placeholder="Username" required />
-      <input type="email" id="signup-email" placeholder="Email" required />
-      <input type="password" id="signup-password" placeholder="Password" required />
-      <button type="submit">Create Account</button>
-    </form>
-
-    <form id="login-form" style="display: none;">
-      <input type="email" id="login-email" placeholder="Email" required />
-      <input type="password" id="login-password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
-
-    <div class="switch-form">
-      <span id="switch-msg">Already have an account? <a id="toggle-link">Login here</a></span>
+    <div class="form-tabs">
+      <button id="signupTab" class="active">Sign Up</button>
+      <button id="loginTab">Login</button>
     </div>
-  </div>
+
+    <div class="form-container">
+      <div id="errorMessage" class="error-message"></div>
+
+      <!-- Sign Up Form -->
+      <form id="signupForm">
+        <label for="signupUsername">Username</label>
+        <input type="text" id="signupUsername" placeholder="Username" required />
+
+        <label for="signupEmail">Email</label>
+        <input type="email" id="signupEmail" placeholder="Email" required />
+
+        <label for="signupPassword">Password</label>
+        <input type="password" id="signupPassword" placeholder="Password" required />
+
+        <button type="submit" class="btn-primary">Create Account</button>
+      </form>
+
+      <!-- Login Form -->
+      <form id="loginForm" style="display: none;">
+        <label for="loginEmail">Email</label>
+        <input type="email" id="loginEmail" placeholder="Email" required />
+
+        <label for="loginPassword">Password</label>
+        <input type="password" id="loginPassword" placeholder="Password" required />
+
+        <button type="submit" class="btn-primary">Login</button>
+      </form>
+    </div>
+  </main>
 
   <script>
-    const signupForm = document.getElementById('signup-form');
-    const loginForm = document.getElementById('login-form');
-    const formTitle = document.getElementById('form-title');
-    const switchMsg = document.getElementById('switch-msg');
-    const toggleLink = document.getElementById('toggle-link');
+    // Switch tabs
+    const signupTab = document.getElementById('signupTab');
+    const loginTab = document.getElementById('loginTab');
+    const signupForm = document.getElementById('signupForm');
+    const loginForm = document.getElementById('loginForm');
+    const errorMessage = document.getElementById('errorMessage');
 
-    toggleLink.addEventListener('click', () => {
-      if (signupForm.style.display !== 'none') {
-        // Switch to Login form
-        signupForm.style.display = 'none';
-        loginForm.style.display = 'flex';
-        formTitle.textContent = 'Login';
-        switchMsg.innerHTML = `Don't have an account? <a id="toggle-link">Sign Up here</a>`;
+    signupTab.addEventListener('click', () => {
+      signupTab.classList.add('active');
+      loginTab.classList.remove('active');
+      signupForm.style.display = 'block';
+      loginForm.style.display = 'none';
+      errorMessage.textContent = '';
+    });
 
-      } else {
-        // Switch to Sign Up form
-        signupForm.style.display = 'flex';
-        loginForm.style.display = 'none';
-        formTitle.textContent = 'Sign Up';
-        switchMsg.innerHTML = `Already have an account? <a id="toggle-link">Login here</a>`;
+    loginTab.addEventListener('click', () => {
+      loginTab.classList.add('active');
+      signupTab.classList.remove('active');
+      loginForm.style.display = 'block';
+      signupForm.style.display = 'none';
+      errorMessage.textContent = '';
+    });
+
+    // Sign Up
+    signupForm.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const username = document.getElementById('signupUsername').value.trim();
+      const email = document.getElementById('signupEmail').value.trim();
+      const password = document.getElementById('signupPassword').value;
+
+      let users = JSON.parse(localStorage.getItem('users')) || [];
+
+      if (users.find(u => u.email === email)) {
+        errorMessage.textContent = "Email already registered!";
+        return;
       }
 
-      // Re-attach event listener to the new toggle link element
-      document.getElementById('toggle-link').addEventListener('click', arguments.callee);
+      users.push({ username, email, password });
+      localStorage.setItem('users', JSON.stringify(users));
+      localStorage.setItem('currentUser', JSON.stringify({ username, email }));
+      alert("Account created successfully! You are now logged in.");
+      window.location.href = "index.html";
+    });
+
+    // Login
+    loginForm.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const email = document.getElementById('loginEmail').value.trim();
+      const password = document.getElementById('loginPassword').value;
+
+      let users = JSON.parse(localStorage.getItem('users')) || [];
+      const user = users.find(u => u.email === email && u.password === password);
+
+      if (!user) {
+        errorMessage.textContent = "Invalid email or password!";
+        return;
+      }
+
+      localStorage.setItem('currentUser', JSON.stringify({ username: user.username, email: user.email }));
+      alert("Login successful!");
+      window.location.href = "index.html";
+    });
+
+    // Show username & logout in nav if logged in
+    function updateNavUser() {
+      const currentUser = JSON.parse(localStorage.getItem('currentUser'));
+      const accountLink = document.getElementById('accountLink');
+      if (currentUser) {
+        accountLink.innerHTML = `
+          <span class="welcome-user">Welcome, ${currentUser.username}</span>
+          <button class="logout-btn" id="logoutBtn">Logout</button>
+        `;
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+          localStorage.removeItem('currentUser');
+          window.location.reload();
+        });
+      }
+    }
+
+    // Cart count
+    function updateCartCount() {
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+      const totalItems = cart.reduce((sum, item) => sum + parseInt(item.quantity || 0), 0);
+      document.getElementById('cartCount').textContent = totalItems || 0;
+    }
+
+    window.addEventListener('load', () => {
+      updateCartCount();
+      updateNavUser();
     });
   </script>
+  <script src="auth.js"></script>
 
 </body>
 </html>
+
+
+
+
 
 
